[package]
name = "spur"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
x11rb = { version = "0.9.0"}
scrap = "0.5.0"
v4l = {version = "0.12.1", features = ["v4l2-sys"] }
gstreamer = "0.17.4"
gstreamer-video = "0.17.2"
num-rational = "0.4.0"

serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]}
uuid = { version = "0.8.1", features = ["v4"] } 
# futures = "0.3.21"
futures = { version = "0.3", features = ["compat"] } 
home = "0.5.3"


[build-dependencies]
dotenv-build = "0.1"